Add NSG with Bicep

--- a/.github/workflows/nsg-deployment-bicep.yml
+++ b/.github/workflows/nsg-deployment-bicep.yml
@@ -45,7 +45,7 @@ jobs:
     # Deploy Bicep file
     # Documentation on arm-deploy module: https://github.com/Azure/arm-deploy
     - uses: azure/arm-deploy@v1
-      name: Deploy AVD with Bicep
+      name: Deploy NSG with Bicep
       with:
         scope: resourcegroup
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID_SANDBOX }}
