--- a/.github/workflows/nsg-deployment-bicep.yml
+++ b/.github/workflows/nsg-deployment-bicep.yml
@@ -55,5 +55,5 @@ jobs:
         parameters:
           location=westeurope 
           name=avd-bicep-demo-westeu-01
-          @./shared-rules.json
+          @./nsg-bicep/shared-rules.json
         failOnStdErr: false
