--- a/.github/workflows/nsg-deployment-bicep.yml
+++ b/.github/workflows/nsg-deployment-bicep.yml
@@ -54,6 +54,6 @@ jobs:
         template: ./nsg-bicep/nsg-1.bicep
         parameters:
           location=westeurope 
-          name=avd-bicep-demo-westeu-01
-          @./nsg-bicep/shared-rules.json
+          nsgName=nsg2-demo
+          # @./nsg-bicep/shared-rules.json
         failOnStdErr: false
