Add NSG creation with Bicep

--- a/.github/workflows/nsg-deployment-bicep.yml
+++ b/.github/workflows/nsg-deployment-bicep.yml
@@ -55,5 +55,5 @@ jobs:
         parameters:
           location=westeurope 
           nsgName=nsg5-demo
-          # @./nsg-bicep/shared-rules.json
+          @./nsg-bicep/shared-rules.json
         failOnStdErr: false
