--- a/.github/workflows/nsg-deployment-bicep.yml
+++ b/.github/workflows/nsg-deployment-bicep.yml
@@ -54,5 +54,5 @@ jobs:
         template: ./nsg-bicep/nsg-1.bicep
         parameters:
           location=westeurope 
-          nsgName=nsg7-demo
+          nsgName=nsg-demo-westeu-01
         failOnStdErr: false
