--- a/.github/workflows/nsg-policy.yml
+++ b/.github/workflows/nsg-policy.yml
@@ -48,5 +48,5 @@ jobs:
       with:      
         paths:  |                
           policies/**
-        # assignments:  |
-        #   assign.*_testRG_*.json 
+        assignments:  |
+          assign.*.json
